tests/ui/foreign_write.stderr
Error [E0018]: changeable access is written `mut`, not `write`
  --> tests/ui/foreign_write.lex:1:9
    |
  1 | fn bump(write score: Int) {
    |         ^^^^^
 Why: Lex has exactly one spelling for each thing, so all code reads the same
 Fix: replace `write` with `mut`
